--- a/HW1207/13_陳峻毅/CH12.03_Q09.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q09.md
@@ -22,7 +22,7 @@ $y = 0.868 + 0.0231x$
 
 | Source      | Sum of Squares | Degrees of Freedom | Mean Square      | F-statistic |
 |-------------|----------------|--------------------|------------------|-------------|
-| Regression  |  SSR = 0.0539  |  1               | 0.0539       |  494.36 $ |
+| Regression  |  SSR = 0.0539  |  1               | 0.0539       |  494.36 |
 | Error       |  SSE = 0.0015  | 14             |  0.0001       | N/A         |
 | Total       |  SST = 0.0554  |  15             | N/A              | N/A         |
 
