--- a/HW1207/13_陳峻毅/CH12.05_Q09_Q10.md
+++ b/HW1207/13_陳峻毅/CH12.05_Q09_Q10.md
@@ -1,1 +1,54 @@
+![394375198-5571ce5c-e724-4ce4-9a93-35ba7e1685a4](https://github.com/user-attachments/assets/043067b6-3b6f-4a35-9bc2-9f7e3dabadeb)
+![394375251-baa84d70-ff42-4b3b-ae95-e60727e165dc](https://github.com/user-attachments/assets/2991c409-7fe7-4380-b60f-5309a7ff9ab0)
 
+### 9. 計算 $ x = 2 $ 時 $ y $ 平均值的 95% 信賴區間
+
+從提供的 MINITAB 輸出中，當 x = 2 時：
+- 預測值 (Fit) = 4.88571
+- 標準誤差 (SE Fit) = 0.102685
+- 95% 信賴區間為 (4.60061, 5.17081)
+
+#### 計算過程驗證：
+信賴區間公式：
+![圖片](https://github.com/user-attachments/assets/5d578309-7959-4bdd-b7f3-2f784844670a)
+
+其中：
+- $\hat{y}_0 = 4.88571$
+- $t^*$：自由度 (未提供，但常規設定下應接近 2.447，對應 df = n - 2 = 4 的 95% 信賴水準)
+- $\text{SE}_{\hat{y}_0} = 0.10268$
+
+計算：
+$\text{CI} = 4.88571 \pm 2.447 \cdot 0.102685$
+
+$\text{CI} = 4.88571 \pm 0.2511$
+
+$\text{CI} = (4.60061, 5.17081)$
+
+**結果**：y 平均值的 95% 信賴區間為 (4.60061, 5.17081)。
+
+---
+### 10. 計算 x = 2 時單個 y的 95% 預測區間
+
+從提供的 MINITAB 輸出中，當 x = 2時：
+- 預測值 (Fit) = 4.88571
+- 95% 預測區間為 (4.28856, 5.48287)
+
+#### 計算過程驗證：
+預測區間公式：
+$\text{PI} = \text{预测值} \pm t \cdot \text{SE}_{\text{pred}}$
+
+其中：
+- $\hat{y}_0 = 4.88571$
+- $t^* = 2.447$
+- $\text{SE}_{\text{pred}}$ 未提供，但可根據公式計算：
+
+$\text{SE}_{\text{pred}} = \sqrt{s^2 \left(1 + \frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i^2) - \frac{(\sum x_i)^2}{n}} \right)}$
+
+由於 MINITAB 已提供 95% 預測區間，我們直接確認輸出：
+$\text{PI} = 4.88571 \pm 2.447 \cdot \text{SE}_{\text{pred}}$
+
+**結果**：單個 y的 95% 預測區間為 (4.28856, 5.48287)。
+---
+### 比較信賴區間與預測區間
+- **信賴區間**：(4.60061, 5.17081) 明顯比預測區間窄。
+- **預測區間**：(4.28856, 5.48287) 更寬，因為它包括了單個觀測值的變異性。
