--- a/HW1109/12_譚玥湄/CH07.02_Q9.md
+++ b/HW1109/12_譚玥湄/CH07.02_Q9.md
@@ -42,3 +42,7 @@ Exercises 8. Sampling With Replacement
 
 Mean of $\overline{x}$  =(10 * 0.0625)+(12.5 * 0.125)+(15 * 0.0625)+(15.5 * 0.125)+(16 * 0.125)+(18 * 0.125)+(18.5 * 0.125)+(21 * 0.0625)+(21.5 * 0.125)+(22 * 0.0625)  = 17  
 
+How do they compare with the population mean of m =17 ?
+這些樣本平均數E( $$\bar{x}$$ )和母體平均數 $$\mu$$ 相比，無論抽樣後不放回或者抽樣後放回，都和母體平均數 $$\mu$$ 相同，為17。
+
+
