--- a/HW1123/12_譚玥湄/CH10.01_Q06-7.md
+++ b/HW1123/12_譚玥湄/CH10.01_Q06-7.md
@@ -36,18 +36,19 @@ Q6. Using the t-distribution table, we can find the critical values ($\alpha$) c
 
 ---
 Q7. Using the t-distribution table, we can find the critical values ($$\alpha$$) corresponding to the given left-tail area ($$\alpha$$) and degrees of freedom (df). Here are the values:  
+![image](https://github.com/user-attachments/assets/499b648f-ef46-43e8-a527-e2e7d54f5d55)
 
 7. $$\alpha$$ = .01, df = 9  
-   From the t-table, the critical value is:  $t_{0.05}$=1.725  
+   From the t-table, the critical value is:  $t_{0.05}$=
    
 8. $$\alpha$$ = .05, df = 8    
-  From the t-table, the critical value is:  $t_{0.01}$=2.552
+  From the t-table, the critical value is:  $t_{0.01}$=
 
 9. $$\alpha$$ = .025, df = 15    
-  From the t-table, the critical value is:  $t_{0.025}$=2.179
+  From the t-table, the critical value is:  $t_{0.025}$=
 
 10. $$\alpha$$ = .10, df = 35  
-  From the t-table, the critical value is:  $t_{0.005}$=2.787
+  From the t-table, the critical value is:  $t_{0.005}$=
 
 11. $$\alpha$$ = .005, df = 23  
-  From the t-table, the critical value is:  $t_{t_0.10}=1.415  
+  From the t-table, the critical value is:  $t_{t_0.10}=
