--- a/HW1123/12_譚玥湄/CH10.01_Q06-7.md
+++ b/HW1123/12_譚玥湄/CH10.01_Q06-7.md
@@ -1,5 +1,4 @@
-CH10.01_Q06-7  
-Using the t Table Find the tabled value of t(ta) corresponding to a right-tail area a and degrees of freedom given in Exercises 2–6.  
+CH10.01_Q06-7  Using the t Table Find the tabled value of t(ta) corresponding to a right-tail area a and degrees of freedom given in Exercises 2–6.  
 2. $$\alpha$$ = .05, df = 20  
 3. $$\alpha$$ = .01, df = 18  
 4. $$\alpha$$ = .025, df = 12  
