--- a/HW1123/12_譚玥湄/CH10.01_Q06-7.md
+++ b/HW1123/12_譚玥湄/CH10.01_Q06-7.md
@@ -8,12 +8,12 @@ CH10.01_Q06-7  Using the t Table Find the tabled value of t(ta) corresponding to
 Using the t Table II Find the tabled value of t(ta) corresponding to a left-tail area a and degrees of freedom given in Exercises 7–11.  
 7. $$\alpha$$ = .01, df = 9  
 8. $$\alpha$$ = .05, df = 8    
-9. $$\alpha$$ = .025, df = 15  
+9. $$\alpha$$ = .025, df = 15  https://github.com/HWTeng-Teaching/202409-Stat/blob/main/HW1123/12_%E8%AD%9A%E7%8E%A5%E6%B9%84/CH10.01_Q06-7.md
 10. $$\alpha$$ = .10, df = 35  
 11. $$\alpha$$ = .005, df = 23  
 
 ---
-Q6. Using the t-distribution table, we can find the critical values ($\alpha$) corresponding to the given right-tail area ($$\alpha$$) and degrees of freedom (df). Here are the values:  
+Q6. Using the t-distribution table, we can find the critical values ($\alpha$) corresponding to the given right-tail area ($$\alpha$$) and degrees of freedom (df)
 ![image](https://github.com/user-attachments/assets/25c877c9-b534-419f-bcaf-75b22af4ebb7)
 
 2. $$\alpha$$ = .05, df = 20  
