--- a/HW1123/12_譚玥湄/CH10.01_Q06-7.md
+++ b/HW1123/12_譚玥湄/CH10.01_Q06-7.md
@@ -1,4 +1,5 @@
-CH10.01_Q06-7  Using the t Table Find the tabled value of t(ta) corresponding to a right-tail area a and degrees of freedom given in Exercises 2–6.  
+CH10.01_Q06-7  
+Using the t Table Find the tabled value of t(ta) corresponding to a right-tail area a and degrees of freedom given in Exercises 2–6.  
 2. $$\alpha$$ = .05, df = 20  
 3. $$\alpha$$ = .01, df = 18  
 4. $$\alpha$$ = .025, df = 12  
@@ -13,9 +14,10 @@ Using the t Table II Find the tabled value of t(ta) corresponding to a left-tail
 11. $$\alpha$$ = .005, df = 23  
 
 ---
+Q6. Using the t-distribution table, we can find the critical values ($\alpha$) corresponding to the given right-tail area ($$\alpha$$) and degrees of freedom (df)
 ![image](https://github.com/user-attachments/assets/25c877c9-b534-419f-bcaf-75b22af4ebb7)
 
-Q6. Using the t-distribution table, we can find the critical values ($\alpha$) corresponding to the given right-tail area ($$\alpha$$) and degrees of freedom (df)
+
 2. $$\alpha$$ = .05, df = 20  
    From the t-table, the critical value is:  $t_{0.05}$=1.725  
    
