--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -20,7 +20,7 @@
 >
 >$\sum {x^2} = 15^2 + 20.5^2 + 30^2 + 40^2 + 60^2 +75^2 = 12370.25 $
 >
->$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $
+>$\sum {y^2} = 31.2^2 + 29.3^2 + 27.4^2 + 27.3^2 + 26.8^2 + 20^2 = 123691.158 $
 >
 >$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
 >
