--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -22,7 +22,7 @@
 >
 >$\sum {y^2} = 31.2^2 + 29.3^2 + 27.4^2 + 27.3^2 + 26.8^2 + 20^2 = 123691.158 $
 >
->$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
+>$\sum xy = (15)(31.2) + (20.5)(29.3) + (30)(27.4) + (40)(27.3) + (60)(26.8) + (75)(20) = 6090.65 $
 >
 >$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
 >
