--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -24,7 +24,7 @@
 >
 >$\sum xy = (15)(31.2) + (20.5)(29.3) + (30)(27.4) + (40)(27.3) + (60)(26.8) + (75)(20) = 6090.65 $
 >
->$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
+>$\bar{x} = \frac{15 + 20.5 + 30 + 40 + 60 + 75}{6} = 40.0833 $
 >
 >$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
 >
