--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -26,7 +26,7 @@
 >
 >$\bar{x} = \frac{15 + 20.5 + 30 + 40 + 60 + 75}{6} = 40.0833 $
 >
->$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
+>$\bar{y} = \frac{31.2 + 29.3 + 27.4 + 27.3 + 26.8 +20}{6} = 27 $
 >
 >$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
 >
