--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -32,18 +32,11 @@
 >
 >$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 6090.65 - \frac{(240.5)(162)}{6} = -402.85 $
 >
->斜率: $$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2 $$   							
+>斜率: $$b = \frac{S_{xy}}{S_{xx}} = \frac{-402.85}{2730.2} = -0.1476 $$   							
 >							
->截距: $$a= \bar{y}-b*\bar{x} = 3 - (1.2)(0) = 3 $$							
+>截距: $$a= \bar{y}-b*\bar{x} = 27 - (-0.1476)(40.0833) = 32.9163 $$							
 >						
->least-square line : $$\hat{y} = 3 + 1.2x $$
-
-
-
-
-Sxx = 2730.208 ， Sxy = -402.85 ，得 b = -0.1476 a= 32.9144 
-
-least-square line: $\hat{y}$ = 32.9144 - 0.1476 *x
+>least-square line : $$\hat{y} = 32.9163 - 0.1476x $$
 
 ## 問題c. 建構這個線性回歸的 ANOVA 表格。
 
