--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -58,6 +58,21 @@ SSR = $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^
 
 SSE = SST - SSR = 72.22-59.4417 = 12.7783
 
+>SST = $S_{yy} = \sum {y^2} - \frac{(\sum{y})^2}{n} = 61 - \frac{(15)^2}{5} = 16 $ 
+>
+>SSR = $\frac{S_{xy}^2}{S_{xx}}$ = $\frac{12^2}{10}$ = 14.4
+>
+>SSE = SST - SSR = 16 - 14.4 = 1.6
+>
+>MSR = $\frac{SSR} {df_{reg}}$ = $\frac{14.4}{1}$ = 14.4
+>
+>MSE = $\frac{SSE}{df_{error}}$ = $\frac{1.6}{3}$ = 0.5333
+
+![image](https://github.com/user-attachments/assets/ed5c32c0-4397-41f9-8774-57405f2e48d7)
+
+![image](https://github.com/user-attachments/assets/6c035b85-fd32-447f-bdeb-1738a6d51e3d)
+
+
 MSR = SSR / $df_{reg}$ = 59.4417 /1 =59.4417
 
 MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
