--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -42,22 +42,22 @@
 
 |       | DF    | SS | MS |
 | ----  | --    | -- | -- |
-| Reg   | 1     | 59.4417  | 59.4417  |
-| Error | 4     | 12.7783 |3.1946  |
+| Reg   | 1     | 59.44 | 59.4417  |
+| Error | 4     | 12.78 |3.195  |
 | Tatol | 5     | 72.22 |
-
-$df_{reg}$ = 1
-
-$df_{error}$ = n-k = 4
-
-$df_{total}$ = n-1 = 5
-   
-SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22
-
-SSR = $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4417
-
-SSE = SST - SSR = 72.22-59.4417 = 12.7783
-
+>
+>$df_{reg}$ = 1
+>
+>$df_{error}$ = n-k = 4
+>
+>$df_{total}$ = n-1 = 5
+>   
+>SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22
+>
+>SSR = $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4417
+>
+>SSE = SST - SSR = 72.22-59.4417 = 12.7783
+>
 >SST = $S_{yy} = \sum {y^2} - \frac{(\sum{y})^2}{n} = 4446.22 - \frac{(162)^2}{6} = 72.22 $ 
 >
 >SSR = $\frac{S_{xy}^2}{S_{xx}}$ = $\frac{-402.85^2}{2730.20}$ = 59.44
@@ -66,13 +66,8 @@ SSE = SST - SSR = 72.22-59.4417 = 12.7783
 >
 >MSR = $\frac{SSR} {df_{reg}}$ = $\frac{59.44}{1}$ = 59.44
 >
->MSE = $\frac{SSE}{df_{error}}$ = $\frac{12.78}{4}$ = 0.5333
+>MSE = $\frac{SSE}{df_{error}}$ = $\frac{12.78}{4}$ = 3.195
 
 ![image](https://github.com/user-attachments/assets/ed5c32c0-4397-41f9-8774-57405f2e48d7)
 
 ![image](https://github.com/user-attachments/assets/6c035b85-fd32-447f-bdeb-1738a6d51e3d)
-
-
-MSR = SSR / $df_{reg}$ = 59.4417 /1 =59.4417
-
-MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
