--- a/HW1207/09_沈佩如/CH12.02_Q16.md
+++ b/HW1207/09_沈佩如/CH12.02_Q16.md
@@ -2,4 +2,10 @@
 
 ![image](https://github.com/user-attachments/assets/9addd7c1-3b24-4fd9-b35d-3b9f253e80fe)
 
-## 由題目得知：
+## 由題目得知：在實驗中獲得的數據如下：
+
+## 題目 a：找出資料的最小平方法直線。
+
+## 題目 b：繪製數據點並劃出最小平方法直線，以檢查計算結果。
+
+## 題目 c：建構該回歸的變異數分析表(ANOVA)。
