--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -36,7 +36,7 @@
 >							
 >截距: $$a= \bar{y}-b*\bar{x} = 27 - (-0.1476)(40.0833) = 32.9163 $$							
 >						
->least-square line : $$\hat{y} = 32.9163 - 0.1476x $$
+>least-square line : 帶入 y=a+bx ， $$\hat{y} = 32.9163 - 0.1476x $$
 
 ## 問題c. 建構這個線性回歸的 ANOVA 表格。
 
