--- a/HW1207/09_沈佩如/CH12.02_Q16.md
+++ b/HW1207/09_沈佩如/CH12.02_Q16.md
@@ -8,4 +8,7 @@
 
 ## 題目 b：繪製數據點並劃出最小平方法直線，以檢查計算結果。
 
+![image](https://github.com/user-attachments/assets/5ebb5dcf-b4f4-4c37-acad-a473140d3566)
+
+
 ## 題目 c：建構該回歸的變異數分析表(ANOVA)。
