--- a/HW1207/09_沈佩如/CH12.02_Q16.md
+++ b/HW1207/09_沈佩如/CH12.02_Q16.md
@@ -5,10 +5,19 @@
 ## 由題目得知：在實驗中獲得的數據如下：
 
 ## 題目 a：找出資料的最小平方法直線。
+>
+>![image](https://github.com/user-attachments/assets/990bade2-79dd-44cb-bb11-8d23b4643496)
 
 ## 題目 b：繪製數據點並劃出最小平方法直線，以檢查計算結果。
-
-![image](https://github.com/user-attachments/assets/5ebb5dcf-b4f4-4c37-acad-a473140d3566)
-
+>
+>![image](https://github.com/user-attachments/assets/5ebb5dcf-b4f4-4c37-acad-a473140d3566)
+>
+>截距 a  =2
+>
+>斜率 b = −0.875
+>
+>這表示溫度增加時，草莓的質地 y 會下降，溫度與質地之間呈負相關關係。
 
 ## 題目 c：建構該回歸的變異數分析表(ANOVA)。
+>
+>![image](https://github.com/user-attachments/assets/7b179405-a850-4d0f-a8bc-ef326b53b41b)
