--- a/HW1207/09_沈佩如/CH12.03_Q05.md
+++ b/HW1207/09_沈佩如/CH12.03_Q05.md
@@ -2,4 +2,4 @@
 
 ![image](https://github.com/user-attachments/assets/3c01679a-1e86-42d7-ac7f-31b1545fcc90)
 
-## 由題目得知：
+## 由題目得知：使用題目中給定的數據，檢驗 y 和 x 之間是否具有線性關係？使用 t 統計量在 1% 顯著水準下進行檢定。建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
