--- a/HW1207/13_陳峻毅/CH12.05_Q07_Q08.md
+++ b/HW1207/13_陳峻毅/CH12.05_Q07_Q08.md
@@ -1,6 +1,6 @@
 ![394370056-fa9ecb5c-2495-48d0-aef0-f6166e6b088e](https://github.com/user-attachments/assets/a58b32a0-5387-4822-8546-062737ccedc1)
 
-### 7. 計算 $ x = 1 $ 時 $ y $ 平均值的 90% 信賴區間
+### 7. 計算 x = 1 時 y 平均值的 90% 信賴區間
 
 #### 已知數據
 - x = [-2, -1, 0, 1, 2]
@@ -28,7 +28,7 @@
 #### 步驟 2：計算 $\hat{y}_0$ 當 x = 1 時
 $\hat{y}_0 = 3 + 1.2(1) = 4.2$
 
-#### 步驟 3：計算標準誤差 $ s $
+#### 步驟 3：計算標準誤差 s
 $s = \sqrt{\frac{\sum (y_i - \hat{y}_i)^2}{n - 2}}$
 1. **計算 $\hat{y}_i$**：
    $\hat{y}_i = 3 + 1.2x_i = [0.6, 1.8, 3.0, 4.2, 5.4]$
