--- a/HW1207/02_顏子軒/CH12.02_Q16.md
+++ b/HW1207/02_顏子軒/CH12.02_Q16.md
@@ -1,1 +1,36 @@
+### Strawberries
 
+***The following data were
+obtained in an experiment relating the dependent
+variable, y (texture of strawberries), with x
+(coded storage temperature).***
+
+![image](https://github.com/user-attachments/assets/70a7166e-9ebf-4306-8808-562a7ddeecbe)
+
+***a. Find the least-squares line for the data.***
+>
+>**Step 1: Calculate Means:**
+>
+>- $\overline x = 0$
+>- $\overline y = 2$
+>- $S_{xx} = \sum(x_i - \overline{x})^2 = 16$
+>- $S_{xy} = \sum(x_i - \overline{x})(y_i - \overline{y}) = -14$
+>- $b = \frac{S_{xy}}{S_{xx}} = \frac{-14}{16} = -0.875$
+>- $a = \overline{y} - b \overline{x} = 2 - (-0.875)0 = 2$
+>  
+>Thus, the regression line equation is:
+>
+>$\hat{y} = 2 -0.875x$
+>
+><br/>
+***b. Plot the data points and graph the least-squares line as a check on your calculations.***
+>
+>The graph shows:
+>
+>- Data points plotted using $(x,y)$
+>![image](https://github.com/user-attachments/assets/e1e1f049-4c96-432f-a49d-19e0d45b7817)
+>
+><br/>
+***c. Construct the ANOVA table.***
+>
+>
