--- a/HW1207/02_顏子軒/CH12.02_Q16.md
+++ b/HW1207/02_顏子軒/CH12.02_Q16.md
@@ -25,12 +25,16 @@ variable, y (texture of strawberries), with x
 ><br/>
 ***b. Plot the data points and graph the least-squares line as a check on your calculations.***
 >
->The graph shows:
->
 >- Data points plotted using $(x,y)$
 >![image](https://github.com/user-attachments/assets/e1e1f049-4c96-432f-a49d-19e0d45b7817)
 >
 ><br/>
 ***c. Construct the ANOVA table.***
 >
+>*ANOVA table*
 >
+>|no|Source    |df  |SS  |MS            |
+>|--|----------|----|----|--------------|
+>|1 |Regression|1 |12.25 |12.25   |
+>|2 |Error     |3|0.25 |$\approx 0.8333$|
+>|3 |Total     |4|12.5|  |
