--- a/HW1207/09_沈佩如/CH12.03_Q05.md
+++ b/HW1207/09_沈佩如/CH12.03_Q05.md
@@ -3,6 +3,15 @@
 ![image](https://github.com/user-attachments/assets/3c01679a-1e86-42d7-ac7f-31b1545fcc90)
 
 ## 由題目得知：使用題目中給定的數據，檢驗 y 和 x 之間是否具有線性關係？使用 t 統計量在 1% 顯著水準下進行檢定。建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
-
-
+>
+>![image](https://github.com/user-attachments/assets/515606ac-94b9-4dcb-ac6a-0425f5cca8b0)
+>
+>![image](https://github.com/user-attachments/assets/0affa10d-838f-4356-bfc8-867177dec2f0)
+>
+>![image](https://github.com/user-attachments/assets/8755437e-9847-442f-ac37-79cc252d7064)
+>
 ![image](https://github.com/user-attachments/assets/3adcbdfa-f937-4a35-a2d6-caaa58f4ddd0)
+
+![image](https://github.com/user-attachments/assets/8840b1d6-807a-448a-a108-586182733705)
+
+![image](https://github.com/user-attachments/assets/8c9d83e9-8f1b-4bd1-9c0b-78b57ce60431)
