--- a/HW1207/09_沈佩如/CH12.03_Q07.md
+++ b/HW1207/09_沈佩如/CH12.03_Q07.md
@@ -2,4 +2,4 @@
 
 ![image](https://github.com/user-attachments/assets/cb34d3fd-5021-4103-bd52-ae5c4c215c9c)
 
-## 由題目得知：
+## 由題目得知：使用所給的數據計算決定係數 $。這個數值告訴我們什麼資訊，關於這個線性模型的實用性？
