--- a/HW1109/12_譚玥湄/CH07.05_Q31.md
+++ b/HW1109/12_譚玥湄/CH07.05_Q31.md
@@ -32,9 +32,9 @@ Standardize $$\hat{p}$$=0.45 and using the Z-score formula:
 $$Z = \frac{\hat{p} - \mu_{\hat{p}}}{\sigma_{\hat{p}}}$$  
 $$Z = \frac{0.45 - 0.47}{0.00699} = \frac{-0.02}{0.00699} \approx  -2.86$$  
 Using the standard normal table:  
-$$P(Z < -2.86) \approx 0.0021  
+P(Z < -2.86) \approx 0.0021  
 Thus:  
-P($$\hat{p}$$<0.45)≈0.0021 or 0.21%.  
+P($\hat{p}$<0.45)≈0.0021 or 0.21%.  
 
 ---
 c. What is the probability that ˆp lies in the interval .42 to .45?  
