--- a/HW1207/09_沈佩如/CH12.03_Q07.md
+++ b/HW1207/09_沈佩如/CH12.03_Q07.md
@@ -3,3 +3,7 @@
 ![image](https://github.com/user-attachments/assets/cb34d3fd-5021-4103-bd52-ae5c4c215c9c)
 
 ## 由題目得知：使用所給的數據計算決定係數 $r^2$。這個數值告訴我們什麼資訊，關於這個線性模型的實用性？
+>
+>![image](https://github.com/user-attachments/assets/cd9777a4-e32a-4877-b050-3751f5e58866)
+
+![image](https://github.com/user-attachments/assets/063990b7-4ac3-47a3-8969-20122b58c6b1)
