--- a/HW1109/12_譚玥湄/CH07.05_Q31.md
+++ b/HW1109/12_譚玥湄/CH07.05_Q31.md
@@ -24,7 +24,7 @@ $$σ\hat{p}$$ = $$\sqrt{\frac{p(1 - p)}{n}}$$
 $$σ\hat{p}$$ = $$\sqrt{\frac{0.47(1 - 0.47)}{100}}$$  = $$\sqrt{0.00004884} \approx 0.00699$$  
 
 Thus:  
-μ$$\hat{p}$$=0.47, $$σ\hat{p}$$≈0.00699
+μ $\hat{p}$ =0.47, $$σ\hat{p}$$≈0.00699
 
 ---
 b. What is the probability that the sample proportion $$\hat{p}$$ is less than 0.45?  
@@ -32,9 +32,9 @@ Standardize $$\hat{p}$$=0.45 and using the Z-score formula:
 $$Z = \frac{\hat{p} - \mu_{\hat{p}}}{\sigma_{\hat{p}}}$$  
 $$Z = \frac{0.45 - 0.47}{0.00699} = \frac{-0.02}{0.00699} \approx  -2.86$$  
 Using the standard normal table:  
-P(Z < -2.86) \approx 0.0021  
+$$P(Z < -2.86) \approx 0.0021  $$
 Thus:  
-P($\hat{p}$<0.45)≈0.0021 or 0.21%.  
+P($\hat{p}$ <0.45) ≈ 0.0021 or 0.21%.  
 
 ---
 c. What is the probability that ˆp lies in the interval .42 to .45?  
@@ -53,7 +53,7 @@ From the Z-table:
 $$ P(Z < -2.86) \approx 0.0021 $$  
 
 Thus, the probability that $$\hat{p}$$ lies in the interva 0.42 to 0.45 is approximately:  
-P(0.42< $$\hat{p}$$ <0.45)≈P(Z=−2.86)−P(Z=−7.15)=0.0021−0≈0.0021 or 0.21%.
+P(0.42< $\hat{p}$ <0.45)≈P(Z=−2.86)−P(Z=−7.15)=0.0021−0≈0.0021 or 0.21%.
 
 ---
 d. What might you conclude about p if the observed sample proportion were less than 0.30?  
