--- a/HW1207/09_沈佩如/CH12.03_Q09.md
+++ b/HW1207/09_沈佩如/CH12.03_Q09.md
@@ -2,4 +2,11 @@
 
 ![image](https://github.com/user-attachments/assets/1a7ff2e1-8942-46ce-8443-f3706a085fbe)
 
-## 由題目得知：
+## 題目a. 繪製道路里程與時間（年）之間的散佈圖，描述你所看到的趨勢。
+
+## 題目b. 求出描述這組數據的最小平方法直線。檢驗數據是否顯示出「道路里程數量與年份之間具有線性關係」，使用 t-統計量並設定顯著水準 α=0.05。
+
+## 題目c. 建構 ANOVA 表格，並使用 F-統計量來回答問題 b。驗證 t-stat的平方是否等於 F。
+
+## 題目d. 計算決定係數 $R^2$ 。這個值對線性回歸模型的有效性提供了什麼資訊？
+
