--- a/HW1207/09_沈佩如/CH12.03_Q09.md
+++ b/HW1207/09_沈佩如/CH12.03_Q09.md
@@ -3,6 +3,8 @@
 ![image](https://github.com/user-attachments/assets/1a7ff2e1-8942-46ce-8443-f3706a085fbe)
 
 ## 題目a. 繪製道路里程與時間（年）之間的散佈圖，描述你所看到的趨勢。
+>
+>![image](https://github.com/user-attachments/assets/d4c378c4-abd3-4816-9f84-df2bffad046b)
 
 ## 題目b. 求出描述這組數據的最小平方法直線。檢驗數據是否顯示出「道路里程數量與年份之間具有線性關係」，使用 t-統計量並設定顯著水準 α=0.05。
 
