--- a/HW1207/02_顏子軒/CH12.03_Q05.md
+++ b/HW1207/02_顏子軒/CH12.03_Q05.md
@@ -1,1 +1,64 @@
+### Testing the Slope of the Line
 
+***Use the data given in
+Exercises
+5–6 (Exercises 17–18, Section 12.1). Do the
+data provide sufficient evidence to indicate that y and
+x are linearly related? Test using the t statistic at the
+1% level of significance. Construct a 99% confidence
+interval
+for the slope of the line. What does the phrase
+“99% confident” mean?***
+
+![image](https://github.com/user-attachments/assets/b5de1b29-bc0d-4887-bda4-79a3f2d6e8f5)
+
+>
+>*1. Least-Squares Regression Line*
+>
+>- Compute means:
+>>$\overline{x}$ = 0
+>>
+>>$\overline{y}$ = 3
+>
+>- Compute sums:
+>
+>>$S_{xx}$ = 10
+>>
+>>$S_{xy}$ = 12
+>>
+>>$S_{yy}$ = 16
+>
+>- Calculate slope and intercept:
+>
+>>$b = \frac{S_{xy}}{S_{xx}}$ = $\frac{12}{10} = 2$
+>>
+>>$a = \overline{y} - b \overline{x}$ = 3
+>
+><br/>
+>*2. Testing Linear Relationship*
+>
+>Hypotheses:
+>
+>- $H_0 : b=0$  (no linear relationship)
+>- $H_a : b\neq0$ (there is a linear relationship)
+>
+> t-Statistic Formula: $t = \frac{b}{SE_b}$ = 
+>
+>>$SE_b$ = $\sqrt{\frac{S_{yy}-b \times S_{xy}}{{n-2}}}$ $\times \frac{1}{\sqrt{S_{xx}}}$ = $\sqrt{\frac{1.6}{3}} \times \frac{1}{\sqrt{10}}$ = 0.23094
+>>
+>>$S_{yy} = \sum{y_i - \overline{y}}^2$
+>
+>*3. Critical t-Value*
+>
+>The critical 𝑡-value for a two-tailed test at the 1% significance level is found using:
+>
+>>$t_{critical} = t_{\alpha/2,n-2}$
+>>
+>>Where:
+>>
+>>-$\alpaha = 0.01$((significance level)
+>>-$df = n-2$ (degrees of freedom)
+>
+>*4. 99% Confidence Interval for the Slope*
+>
+>The confidence interval for the slope is given by: $b \pm t_{critial} \times SE_b
