--- a/HW1207/HW1207Q06.md
+++ b/HW1207/HW1207Q06.md
@@ -10,7 +10,7 @@ Method of Least Squares Use the data given in Exercises 6–7 (Exercises 17–18
 ---
 To construct the ANOVA table for the simple linear regression analysis, we follow these steps:  
 1. Calculate the regression line & y-values ($\hat{y}$) and residuals (y− $\hat{y}$).  
-   Find the slope ($b$) and intercept ($$) using the Method of Least Squares.
+   Find the slope ($b$) and intercept (a) using the Method of Least Squares.
 
    ![image](https://github.com/user-attachments/assets/788f8a23-501f-4d3d-9157-5071347044b5)
    
