--- a/HW1207/09_沈佩如/CH12.03_Q09.md
+++ b/HW1207/09_沈佩如/CH12.03_Q09.md
@@ -9,6 +9,9 @@
 >散佈圖顯示道路里程與年份之間呈現明顯的線性增長趨勢
 
 ## 題目b. 求出描述這組數據的最小平方法直線。檢驗數據是否顯示出「道路里程數量與年份之間具有線性關係」，使用 t-統計量並設定顯著水準 α=0.05。
+>
+>![image](https://github.com/user-attachments/assets/d6b29cd8-f584-40c1-9be8-d5f0addf0831)
+
 
 ## 題目c. 建構 ANOVA 表格，並使用 F-統計量來回答問題 b。驗證 t-stat的平方是否等於 F。
 
