--- a/HW1207/02_顏子軒/CH12.03_Q05.md
+++ b/HW1207/02_顏子軒/CH12.03_Q05.md
@@ -35,6 +35,7 @@ for the slope of the line. What does the phrase
 >>$a = \overline{y} - b \overline{x}$ = 3
 >
 ><br/>
+>
 >*2. Testing Linear Relationship*
 >
 >Hypotheses:
@@ -42,23 +43,43 @@ for the slope of the line. What does the phrase
 >- $H_0 : b=0$  (no linear relationship)
 >- $H_a : b\neq0$ (there is a linear relationship)
 >
-> t-Statistic Formula: $t = \frac{b}{SE_b}$ = 
+> t-Statistic Formula: $t = \frac{b}{SE_b}$ = $\frac{1.2}{0.23094} \approx 5.20$
 >
 >>$SE_b$ = $\sqrt{\frac{S_{yy}-b \times S_{xy}}{{n-2}}}$ $\times \frac{1}{\sqrt{S_{xx}}}$ = $\sqrt{\frac{1.6}{3}} \times \frac{1}{\sqrt{10}}$ = 0.23094
 >>
->>$S_{yy} = \sum{y_i - \overline{y}}^2$
+>>$S_{yy} = \sum({y_i - \overline{y}})^2$
 >
 >*3. Critical t-Value*
 >
 >The critical 𝑡-value for a two-tailed test at the 1% significance level is found using:
 >
->>$t_{critical} = t_{\alpha/2,n-2}$
+>>$t_{critical} = t_{\alpha/2,n-2}$ = $t_{0.005,3} \approx 5.84$
 >>
 >>Where:
 >>
->>-$\alpaha = 0.01$((significance level)
->>-$df = n-2$ (degrees of freedom)
+>>$\alpha = 0.01$(significance level)
+>>
+>>$df = n-2$ (degrees of freedom)
 >
 >*4. 99% Confidence Interval for the Slope*
 >
->The confidence interval for the slope is given by: $b \pm t_{critial} \times SE_b
+>The confidence interval for the slope is given by: $b \pm t_{critial} \times SE_b$ = $1.2 \pm 5.84 \times 0.23094$
+>
+>**Confidence Interval = $(1.2 - 1.35 , 1.2 + 1.35) = (-0.15, 2.55)**
+>
+>### Interpretation:
+>
+>1. Hypothesis Testing:
+>
+>- Null Hypothesis $H_0$ : There is no linear relationship between 𝑥 and 𝑦(𝛽 = 0)
+>- Alternative Hypothesis $H_a$ : There is a linear relationship between  𝑥 and 𝑦(𝛽 $\neq$ 0)
+>
+>The calculated 𝑡-statistic (5.20) does not exceed the critical 𝑡-value (5.84), so we fail to reject the null hypothesis at the 1% significance level. There is insufficient evidence to conclude that 
+𝑥 and 𝑦 are linearly related.
+>
+>2. 99% Confidence Interval: The slope of the regression line lies in the interval (−0.15,2.55) with 99% confidence. This means we are 99% confident that the true slope of the population regression line is between −0.15 and 2.55.
+>
+>3. Meaning of "99% Confident":
+>
+>If we were to repeat the experiment many times and calculate a confidence interval for the slope each time, 99% of those intervals would contain the true slope of the population regression line.
+
