--- a/HW1207/02_顏子軒/CH12.03_Q05.md
+++ b/HW1207/02_顏子軒/CH12.03_Q05.md
@@ -22,11 +22,11 @@ for the slope of the line. What does the phrase
 >
 >- Compute sums:
 >
->>$S_{xx}$ = 10
+>>$S_{xx}$ = $\sum(x_i - \overline{x})^2 = 10$
 >>
->>$S_{xy}$ = 12
+>>$S_{xy}$ = $\sum(x_i - \overline{x})(y_i - \overline{y}) = 12$
 >>
->>$S_{yy}$ = 16
+>>$S_{yy}$ = $\sum(y_i - \overline{y})^2 = 16$
 >
 >- Calculate slope and intercept:
 >
