--- a/HW1207/02_顏子軒/CH12.03_Q05.md
+++ b/HW1207/02_顏子軒/CH12.03_Q05.md
@@ -65,11 +65,11 @@ for the slope of the line. What does the phrase
 >
 >The confidence interval for the slope is given by: $b \pm t_{critial} \times SE_b$ = $1.2 \pm 5.84 \times 0.23094$
 >
->**Confidence Interval = $(1.2 - 1.35 , 1.2 + 1.35) = (-0.15, 2.55)**
+>**Confidence Interval = $(1.2 - 1.35 , 1.2 + 1.35) = (-0.15, 2.55)$**
 >
 >### Interpretation:
 >
->1. Hypothesis Testing:
+>**1. Hypothesis Testing:**
 >
 >- Null Hypothesis $H_0$ : There is no linear relationship between 𝑥 and 𝑦(𝛽 = 0)
 >- Alternative Hypothesis $H_a$ : There is a linear relationship between  𝑥 and 𝑦(𝛽 $\neq$ 0)
@@ -77,9 +77,11 @@ for the slope of the line. What does the phrase
 >The calculated 𝑡-statistic (5.20) does not exceed the critical 𝑡-value (5.84), so we fail to reject the null hypothesis at the 1% significance level. There is insufficient evidence to conclude that 
 𝑥 and 𝑦 are linearly related.
 >
->2. 99% Confidence Interval: The slope of the regression line lies in the interval (−0.15,2.55) with 99% confidence. This means we are 99% confident that the true slope of the population regression line is between −0.15 and 2.55.
+>**2. 99% Confidence Interval:**
+>  
+>   The slope of the regression line lies in the interval (−0.15,2.55) with 99% confidence. This means we are 99% confident that the true slope of the population regression line is between −0.15 and 2.55.
 >
->3. Meaning of "99% Confident":
+>**3. Meaning of "99% Confident":**
 >
 >If we were to repeat the experiment many times and calculate a confidence interval for the slope each time, 99% of those intervals would contain the true slope of the population regression line.
 
