--- a/HW1207/HW1207Q01.md
+++ b/HW1207/HW1207Q01.md
@@ -8,7 +8,7 @@
 >
 ># 我們一起互相扶持，在共善共好中，成就彼此，
 >
-># 祝福大家新年快樂...!! 
+># 祝福大家~考得全會，猜的全對...!! 
 
 ![image](https://github.com/user-attachments/assets/b8dd7108-115d-4520-8600-a4a7c1ae7011)
 
