--- a/HW1207/09_沈佩如/CH12.03_Q09.md
+++ b/HW1207/09_沈佩如/CH12.03_Q09.md
@@ -13,8 +13,15 @@
 >![image](https://github.com/user-attachments/assets/d6b29cd8-f584-40c1-9be8-d5f0addf0831)
 >
 >求得 least-squares line : $\hat{y} = 0.8681+ 0.0231*x$
+>
+>![image](https://github.com/user-attachments/assets/6d2f4c2e-c3b4-4d9a-99ad-3ec83e9b3af6)
 
 ## 題目c. 建構 ANOVA 表格，並使用 F-統計量來回答問題 b。驗證 t-stat的平方是否等於 F。
+>
+>![image](https://github.com/user-attachments/assets/67be6ba3-c9c2-4cca-9dea-9f48547b9a79)
 
 ## 題目d. 計算決定係數 $R^2$ 。這個值對線性回歸模型的有效性提供了什麼資訊？
+>
+>![image](https://github.com/user-attachments/assets/0b7316dd-3bb1-4bcf-9ced-14e57e3dbd44)
+
 
