--- a/HW1207/02_顏子軒/CH12.03_Q07.md
+++ b/HW1207/02_顏子軒/CH12.03_Q07.md
@@ -1,1 +1,10 @@
+### Coefficient of Determination
+
+***Use the data in Exercises
+7–8 to calculate the coefficient of determination, r2.
+What information does this value give about the
+usefulness
+of the linear model?***
+
+![image](https://github.com/user-attachments/assets/1a295595-ebf4-4640-91c0-f37692951705)
 
