--- a/HW1207/09_沈佩如/CH12.03_Q10.md
+++ b/HW1207/09_沈佩如/CH12.03_Q10.md
@@ -3,4 +3,12 @@
 ![image](https://github.com/user-attachments/assets/5d910d0e-73cd-4efb-bbc2-09662148115e)
 ![image](https://github.com/user-attachments/assets/e20cbb4d-86cf-4c5b-8d34-36de52080331)
 
-## 由題目得知：
+## 題目a. 求出描述「被捕百分比」與「群體年齡中位數」之間關係的least-squares line。
+
+## 題目b. 資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準 下進行檢定。
+
+## 題目c. 建構斜率的 95% 信賴區間。
+
+## 題目d. 計算決定係數 $R^2$，並解釋其意義。
+
+
