--- a/HW1207/09_沈佩如/CH12.03_Q10.md
+++ b/HW1207/09_沈佩如/CH12.03_Q10.md
@@ -4,8 +4,10 @@
 ![image](https://github.com/user-attachments/assets/e20cbb4d-86cf-4c5b-8d34-36de52080331)
 
 ## 題目a. 求出描述「被捕百分比」與「群體年齡中位數」之間關係的least-squares line。
-
-根據表格得知 least-squares line: $\hat{y}$ = 93.617 - 1.251*x
+>
+>根據表格得知，截距: a = 93.617，斜率: b = -1.251，帶入 y=a+bx
+>
+>least-squares line: $\hat{y}$ = 93.617 - 1.251*x
 
 ## 題目b. 資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準 下進行檢定。
 
