--- a/HW1207/09_沈佩如/CH12.03_Q10.md
+++ b/HW1207/09_沈佩如/CH12.03_Q10.md
@@ -10,6 +10,16 @@
 >least-squares line: $\hat{y}$ = 93.617 - 1.251*x
 
 ## 題目b. 資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準 下進行檢定。
+>
+>欲檢定x和y是否有線性關係
+>
+>$H_0$ : b = 0
+>
+>$H_a$ : b $\ne$ 0
+>
+>使用 P-value 檢定斜率b 的顯著性，
+>
+>因P-value = 0 < $\alpha$ = 0.025，故拒絕 $H_0$ ，即有顯著證據證明x和y有線性關係
 
 ## 題目c. 建構斜率的 95% 信賴區間。
 
