--- a/HW1207/10_蔡佳媛/CH12.05_Q03.05_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q03.05_10_Cathy.md
@@ -1,2 +1,30 @@
 
 ![image](https://github.com/user-attachments/assets/549b78ea-5b0f-4739-8e8e-5e6ab35b982f)
+
+
+n = 10  
+SSE = 24
+$\sum x_{i}$ = 59  
+$\sum {x_{i}}^2$ = 397  
+$\hat = 0.074 + 0.46x$  
+$x_{0} = 5$  
+
+
+### Find the confidence interval for the average value of $y$ when $x = x_{0}$  
+
+90% confidence level  
+
+
+
+### Find a prediction interval for a particular value of $y$ when $x = x_{0}$  
+
+90% prediction interval
+
+
+
+### Is the interval wider than the corresponding confidence interval from Exercises 3?  
+
+
+
+
+###
