--- a/HW1207/09_沈佩如/CH12.03_Q10.md
+++ b/HW1207/09_沈佩如/CH12.03_Q10.md
@@ -19,7 +19,7 @@
 >
 >使用 P-value 檢定斜率b 的顯著性，
 >
->因P-value = 0 < $\alpha$ = 0.025，故拒絕 $H_0$ ，即有顯著證據證明x和y有線性關係
+>因P-value = 0 < $\alpha$ = 0.025，故拒絕 $H_0$ ，即有充分證據證明x和y有線性關係
 
 ## 題目c. 建構斜率的 95% 信賴區間。
 
