--- a/HW1207/10_蔡佳媛/CH12.05_Q03.05_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q03.05_10_Cathy.md
@@ -6,7 +6,7 @@ n = 10
 SSE = 24
 $\sum x_{i}$ = 59  
 $\sum {x_{i}}^2$ = 397  
-$\hat = 0.074 + 0.46x$  
+$\hat{y} = 0.074 + 0.46x$  
 $x_{0} = 5$  
 
 
