--- a/HW1207/09_沈佩如/CH12.03_Q10.md
+++ b/HW1207/09_沈佩如/CH12.03_Q10.md
@@ -22,6 +22,15 @@
 >因P-value = 0 < $\alpha$ = 0.025，故拒絕 $H_0$ ，即有充分證據證明x和y有線性關係
 
 ## 題目c. 建構斜率的 95% 信賴區間。
+>
+>由表格知，95%信賴區間下界為 -1.559
+>
+>又 信賴區間下界 = -1.251 - t * $\sqrt{\frac{MSE}{S_{xx}}}$ = -1.559
+>
+>知  t * $\sqrt{\frac{MSE}{S_{xx}}}$ =   (-1.251) -(-1.559) = 0.308 ，知信賴區間 上界為 -1.251 + 0.308 = -0.943
+>
+>故知信賴區間上下界為 [-1.559 , -0.943]
+
 
 ## 題目d. 計算決定係數 $R^2$，並解釋其意義。
 
