--- a/HW1207/20_柯伊馨/CH12.03_Q09.md
+++ b/HW1207/20_柯伊馨/CH12.03_Q09.md
@@ -1,1 +1,3 @@
+![image](https://github.com/user-attachments/assets/f8e6c786-2f15-4553-bfab-c03c3415d978)
 
+![image](https://github.com/user-attachments/assets/dec09b73-cd65-4389-af30-2477bd4ce301)
