--- a/HW1207/09_沈佩如/CH12.05_Q03.05.md
+++ b/HW1207/09_沈佩如/CH12.05_Q03.05.md
@@ -3,3 +3,10 @@
 ![image](https://github.com/user-attachments/assets/d0ae3933-9560-4d8d-b4f1-e7f2b3bc173a)
 
 ## 由題目得知：
+
+
+![image](https://github.com/user-attachments/assets/987a0578-d1d8-4296-a943-4a67c991f17a)
+
+![image](https://github.com/user-attachments/assets/f3f2602e-1385-492f-abb5-9ec3a28f8624)
+
+
