--- a/HW1207/09_沈佩如/CH12.05_Q03.05.md
+++ b/HW1207/09_沈佩如/CH12.05_Q03.05.md
@@ -4,6 +4,15 @@
 
 ## 由題目得知：
 
+當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
+
+信賴區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+
+Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
+
+= 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1/10+0.81/48.9) )}$ =2.374 $\pm$ 1.0999
+
+信賴區間為 [1.2741 , 3.4739 ]
 
 ![image](https://github.com/user-attachments/assets/987a0578-d1d8-4296-a943-4a67c991f17a)
 
