--- a/HW1207/09_沈佩如/CH12.05_Q03.05.md
+++ b/HW1207/09_沈佩如/CH12.05_Q03.05.md
@@ -2,13 +2,19 @@
 
 ![image](https://github.com/user-attachments/assets/d0ae3933-9560-4d8d-b4f1-e7f2b3bc173a)
 
-## 由題目得知：
+## 題目3 ：由題目給的數字，求信賴區間 CI：
 
-當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
+當 $x_0$ = 5時， $\hat{y_0}$ = 0.074 + 0.46(5) = 2.374
 
-信賴區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+信賴區間 CI 為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
 
-Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
+Sxx = 397- $\frac{{59}^2}{10}=48.9$
+
+1/n = 0.1
+
+$(x_0-\bar{x})^2 = (5-\frac{59}{10})^2 = 0.81$
+
+SSE = 24，MSE = $\frac{SSE}{n-2} = \frac{24}{10-2} = 3$
 
 = 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1/10+0.81/48.9) )}$ =2.374 $\pm$ 1.0999
 
