--- a/HW1207/10_蔡佳媛/CH12.05_Q03.05_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q03.05_10_Cathy.md
@@ -8,12 +8,19 @@ $\sum x_{i}$ = 59
 $\sum {x_{i}}^2$ = 397  
 $\hat{y} = 0.074 + 0.46x$  
 $x_{0} = 5$  
+$\bar{x}$ = 5.9  
 
 
 ### Find the confidence interval for the average value of $y$ when $x = x_{0}$  
 
 90% confidence level  
 
+$\hat{y} \pm t_{(n-2}, \alpha/2} \sqrt{\frac{SSE}{n-2} \times (\frac{1}{n} + \frac{(x_{0}-\bar{x})^2}{S_{xx}})}$  
+$0.074 + 0.46 \times 5 \pm t_{8, 0.05} \times \sqrt{\frac{24}{8} \times (\frac{1}{10} + \frac{(5-5.9)^2} {(397 - 10 \times 5.9^2)}$  
+= $0.074 + 2.3 \pm 1.86 \times \sqrt{3 \times (0.1 + \frac{0.81}{48.9})}  
+= 2.374 \pm 1.86 \times \sqrt{0.349693} = 2.374 \pm 1.099908 = [1.274092, 3.473908]$  
+
+![image](https://github.com/user-attachments/assets/0b394422-7c73-4307-9d51-a17523abfb86)
 
 
 ### Find a prediction interval for a particular value of $y$ when $x = x_{0}$  
@@ -27,4 +34,6 @@ $x_{0} = 5$
 
 
 
-###
+
+![image](https://github.com/user-attachments/assets/5a1fa229-ef94-4026-8dea-049b8f8db74d)
+
