--- a/HW1207/09_沈佩如/CH12.05_Q03.05.md
+++ b/HW1207/09_沈佩如/CH12.05_Q03.05.md
@@ -6,15 +6,17 @@
 >
 >當 $x_0$ = 5時， $\hat{y_0}$ = 0.074 + 0.46(5) = 2.374
 >
->信賴區間 CI 為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+>信賴區間 CI 為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $
 >
->Sxx = 397- $\frac{{59}^2}{10}=48.9$
+>查找 t* 值：在自由度 n - 2 = 8 和 90 %信賴水準下，從 t-分布表查得 t* $\approx$ 1.860
 >
->1/n = 0.1
+>SSE = 24，MSE = $\frac{SSE}{n-2} = \frac{24}{10-2} = 3$
+>
+>$\frac{1}{n} = \frac{1}{10} = 0.1$
 >
 >$(x_0-\bar{x})^2 = (5-\frac{59}{10})^2 = 0.81$
-> 
->SSE = 24，MSE = $\frac{SSE}{n-2} = \frac{24}{10-2} = 3$
+>
+>Sxx = 397- $\frac{{59}^2}{10}=48.9$
 >
 >信賴區間 CI 為 = 2.374 $\pm$ 1.86 * $\sqrt{(3 *(0.1 + \frac{0.81}{48.9})}$ = 2.374 $\pm$ 1.0999
 >
