--- a/HW1207/09_沈佩如/CH12.05_Q03.05.md
+++ b/HW1207/09_沈佩如/CH12.05_Q03.05.md
@@ -22,6 +22,26 @@
 >
 >信賴區間為 [1.2741 , 3.4739 ]
 
+## 題目5 ：由題目給的數字，求預測區間 PI：
+>
+>當 $x_0$ = 5時， $\hat{y_0}$ = 0.074 + 0.46(5) = 2.374
+>
+>預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $
+>
+>查找 t* 值：在自由度 n - 2 = 8 和 90 %信賴水準下，從 t-分布表查得 t* $\approx$ 1.860
+>
+>SSE = 24，MSE = $\frac{SSE}{n-2} = \frac{24}{10-2} = 3$
+>
+>$\frac{1}{n} = \frac{1}{10} = 0.1$
+>
+>$(x_0-\bar{x})^2 = (5-\frac{59}{10})^2 = 0.81$
+>
+>Sxx = 397- $\frac{{59}^2}{10}=48.9$
+>
+>預測區間 PI 為 = 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1 + 0.1 + \frac{0.81}{48.9})}$ = 2.374 $\pm$ 3.404
+>
+>預測區間為 [-1.0302 , 5.7782  ]
+
 ![image](https://github.com/user-attachments/assets/987a0578-d1d8-4296-a943-4a67c991f17a)
 
 ![image](https://github.com/user-attachments/assets/f3f2602e-1385-492f-abb5-9ec3a28f8624)
