--- a/HW1207/10_蔡佳媛/CH12.05_Q03.05_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q03.05_10_Cathy.md
@@ -15,10 +15,11 @@ $\bar{x}$ = 5.9
 
 90% confidence level  
 
-$\hat{y} \pm t_{(n-2}, \alpha/2} \sqrt{\frac{SSE}{n-2} \times (\frac{1}{n} + \frac{(x_{0}-\bar{x})^2}{S_{xx}})}$  
-$0.074 + 0.46 \times 5 \pm t_{8, 0.05} \times \sqrt{\frac{24}{8} \times (\frac{1}{10} + \frac{(5-5.9)^2} {(397 - 10 \times 5.9^2)}$  
-= $0.074 + 2.3 \pm 1.86 \times \sqrt{3 \times (0.1 + \frac{0.81}{48.9})}  
-= 2.374 \pm 1.86 \times \sqrt{0.349693} = 2.374 \pm 1.099908 = [1.274092, 3.473908]$  
+$\hat{y} \pm t_{(n-2), \alpha/2} \sqrt{\frac{SSE}{n-2} \times (\frac{1}{n} + \frac{(x_{0}-\bar{x})^2}{S_{xx}})}$  
+$0.074 + 0.46 \times 5 \pm t_{8, 0.05} \times \sqrt{\frac{24}{8} \times (\frac{1}{10} + \frac{(5-5.9)^2} {(397 - 10 \times 5.9^2)})}$  
+= $0.074 + 2.3 \pm 1.86 \times \sqrt{3 \times (0.1 + \frac{0.81}{48.9})}$  
+= $2.374 \pm 1.86 \times \sqrt{0.349693} = 2.374 \pm 1.099908$  
+= [1.274092, 3.473908]  
 
 ![image](https://github.com/user-attachments/assets/0b394422-7c73-4307-9d51-a17523abfb86)
 
@@ -27,11 +28,15 @@ $0.074 + 0.46 \times 5 \pm t_{8, 0.05} \times \sqrt{\frac{24}{8} \times (\frac{1
 
 90% prediction interval
 
+$\hat{y} \pm t_{(n-2), \alpha/2} \sqrt{\frac{SSE}{n-2} \times (1 + \frac{1}{n} + \frac{(x_{0}-\bar{x})^2}{S_{xx}})}$  
+= $0.074 + 2.3 \pm 1.86 \times \sqrt{3 \times (1 + 0.1 + \frac{0.81}{48.9})}$  
+= $2.374 \pm 1.86 \times \sqrt{3.349693} = 2.374 \pm 3.404203$  
+= [-1.030203, 5.778203]  
 
 
 ### Is the interval wider than the corresponding confidence interval from Exercises 3?  
 
-
+Yes.  
 
 
 
