--- a/HW1207/20_柯伊馨/CH12.03_Q10.md
+++ b/HW1207/20_柯伊馨/CH12.03_Q10.md
@@ -1,1 +1,7 @@
+![image](https://github.com/user-attachments/assets/bff48c75-45c0-4fd2-ae82-ac78ba58f258)
+
+![image](https://github.com/user-attachments/assets/7d3fbd71-0e39-4094-b11a-bea3c9326622)
+
+
+
 
