--- a/HW1207/10_蔡佳媛/CH12.05_Q07.08_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q07.08_10_Cathy.md
@@ -1,2 +1,23 @@
 
 ![image](https://github.com/user-attachments/assets/61510535-174a-46cf-a2a7-953743e0f909)
+
+
+|     |   1  |   2  |  3  |  4  |  5  |  Total  |  Average  |  
+|-----|------|------|-----|-----|-----|---------|-----------|  
+| $x$ |  -2  |  -1  |  0  |  1  |  2  |     0   |     0     |  
+| $y$ |   1  |   1  |  3  |  5  |  5  |    15   |     3     |
+|$x^2$|   4  |   1  |  0  |  1  |  4  |    10   |  
+|$y^2$|   1  |   1  |  9  | 25  | 25  |    61   |  
+| $xy$|  -2  |  -1  |  0  |  5  | 10  |    12   |  
+
+### 7. Estimate the average value of $y$ when $x$ = 1, using a 90% confidence interval.  
+
+
+
+
+### 8. Find a 90% prediction interval for some value of $y$ to be observed in the future when $x$ = 1.  
+
+
+
+
+
