--- a/HW1207/09_沈佩如/CH12.05_Q07.08.md
+++ b/HW1207/09_沈佩如/CH12.05_Q07.08.md
@@ -3,3 +3,5 @@
 ![image](https://github.com/user-attachments/assets/d1568d86-2ef9-45ca-86bd-478ed5297d8a)
 
 ## 由題目得知：
+
+![image](https://github.com/user-attachments/assets/cf1529e4-aaaf-485e-a37c-6fcb098132b8)
