--- a/HW1207/20_柯伊馨/CH12.03_Q09.md
+++ b/HW1207/20_柯伊馨/CH12.03_Q09.md
@@ -1,3 +1,5 @@
 ![image](https://github.com/user-attachments/assets/f8e6c786-2f15-4553-bfab-c03c3415d978)
 
 ![image](https://github.com/user-attachments/assets/dec09b73-cd65-4389-af30-2477bd4ce301)
+
+![image](https://github.com/user-attachments/assets/4948e3e8-82eb-49a1-b24e-1203a53fd3e1)
