--- a/HW1207/10_蔡佳媛/CH12.05_Q07.08_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q07.08_10_Cathy.md
@@ -10,6 +10,18 @@
 |$y^2$|   1  |   1  |  9  | 25  | 25  |    61   |  
 | $xy$|  -2  |  -1  |  0  |  5  | 10  |    12   |  
 
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
+$S_{xx} = 10 - 5 \times 0^2 = 10$  
+  
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
+$S_{xy} = 12 - 5 \times 0 \times 3 = 12$  
+  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 0.12$  
+$a = \bar{y} - b \times \bar{x} = 3 - 0.12 \times 0 = 3$  
+
+Least-squares line: $\hat{y} = a + bx = 3 + 0.12x$  
+
+
 ### 7. Estimate the average value of $y$ when $x$ = 1, using a 90% confidence interval.  
 
 
