--- a/HW1207/09_沈佩如/CH12.05_Q07.08.md
+++ b/HW1207/09_沈佩如/CH12.05_Q07.08.md
@@ -5,3 +5,6 @@
 ## 由題目得知：
 
 ![image](https://github.com/user-attachments/assets/cf1529e4-aaaf-485e-a37c-6fcb098132b8)
+
+![image](https://github.com/user-attachments/assets/721eaa32-bed5-4d54-96a5-ec1ddf81be5b)
+
