--- a/HW1207/09_沈佩如/CH12.05_Q07.08.md
+++ b/HW1207/09_沈佩如/CH12.05_Q07.08.md
@@ -2,7 +2,25 @@
 
 ![image](https://github.com/user-attachments/assets/d1568d86-2ef9-45ca-86bd-478ed5297d8a)
 
-## 由題目得知：
+## 題目7 ：由題目給的數字，求信賴區間 CI：
+>
+>當 $x_0$ = 1時， $\hat{y_0}$ = 3 + 1.2(1) = 4.2
+>
+>信賴區間 CI 為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $
+>
+>查找 t* 值：在自由度 n - 2 = 3 和 90 %信賴水準下，從 t-分布表查得 t* $\approx$ 2.353
+>
+>SSE = 16，MSE = $\frac{SSE}{n-2} = \frac{16}{5-2} = 0.5333$
+>
+>$\frac{1}{n} = \frac{1}{5} = 0.2$
+>
+>$(x_0-\bar{x})^2 = (1-0)^2 = 1$
+>
+>Sxx = 397- $\frac{{59}^2}{10}=48.9$
+>
+>信賴區間 CI 為 = 2.374 $\pm$ 1.86 * $\sqrt{(3 *(0.1 + \frac{0.81}{48.9})}$ = 2.374 $\pm$ 1.0999
+>
+>信賴區間為 [1.2741 , 3.4739 ]
 
 ![image](https://github.com/user-attachments/assets/cf1529e4-aaaf-485e-a37c-6fcb098132b8)
 
