--- a/HW1207/09_沈佩如/CH12.05_Q07.08.md
+++ b/HW1207/09_沈佩如/CH12.05_Q07.08.md
@@ -14,7 +14,7 @@
 >
 >$\frac{1}{n} = \frac{1}{5} = 0.2$
 >
->$(x_0-\bar{x})^2 = (1-0)^2 = 1$
+>$(x_0-\bar{x})^2 = (1-\frac{0}{5})^2 = 1$
 >
 >Sxx = 397- $\frac{{59}^2}{10}=48.9$
 >
