--- a/HW1207/09_沈佩如/CH12.05_Q07.08.md
+++ b/HW1207/09_沈佩如/CH12.05_Q07.08.md
@@ -4,6 +4,8 @@
 
 ## 題目7 ：由題目給的數字，求信賴區間 CI：
 >
+>![image](https://github.com/user-attachments/assets/cf1529e4-aaaf-485e-a37c-6fcb098132b8)
+>
 >當 $x_0$ = 1時， $\hat{y_0}$ = 3 + 1.2(1) = 4.2
 >
 >信賴區間 CI 為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $
@@ -21,8 +23,6 @@
 >信賴區間 CI 為 = 4.2 $\pm$ 2.353 * $\sqrt{(0.5333 *(0.2 + \frac{1}{10})}$ = 4.2 $\pm$ 0.9412
 >
 >信賴區間為 [2.2408 , 6.1592 ]
-
-![image](https://github.com/user-attachments/assets/cf1529e4-aaaf-485e-a37c-6fcb098132b8)
 
 ![image](https://github.com/user-attachments/assets/721eaa32-bed5-4d54-96a5-ec1ddf81be5b)
 
