--- a/HW1207/09_沈佩如/CH12.05_Q07.08.md
+++ b/HW1207/09_沈佩如/CH12.05_Q07.08.md
@@ -22,7 +22,27 @@
 >
 >信賴區間 CI 為 = 4.2 $\pm$ 2.353 * $\sqrt{(0.5333 *(0.2 + \frac{1}{10})}$ = 4.2 $\pm$ 0.9412
 >
->信賴區間為 [2.2408 , 6.1592 ]
+>信賴區間為 [ 2.2408 , 6.1592 ]
+>
+>## 題目8 ：由題目給的數字，求預測區間 PI：
+>
+>當 $x_0$ = 1時， $\hat{y_0}$ = 3 + 1.2(1) = 4.2
+>
+>預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $
+>
+>查找 t* 值：在自由度 n - 2 = 3 和 90 %信賴水準下，從 t-分布表查得 t* $\approx$ 2.353
+>
+>SSE = 16，MSE = $\frac{SSE}{n-2} = \frac{16}{5-2} = 0.5333$
+>
+>$\frac{1}{n} = \frac{1}{5} = 0.2$
+>
+>$(x_0-\bar{x})^2 = (1-\frac{0}{5})^2 = 1$
+>
+>Sxx = 10- $\frac{{0}^2}{5} = 10$
+>
+>預測區間 PI 為 = 4.2 $\pm$ 2.353 * $\sqrt{(0.5333 *(1 + 0.2 + \frac{1}{10})}$ = 4.2 $\pm$ 1.9592
+>
+>預測區間為 [ 2.2408 , 6.1592 ]
 
 ![image](https://github.com/user-attachments/assets/721eaa32-bed5-4d54-96a5-ec1ddf81be5b)
 
