--- a/HW1207/20_柯伊馨/CH12.03_Q10.md
+++ b/HW1207/20_柯伊馨/CH12.03_Q10.md
@@ -2,6 +2,7 @@
 
 ![image](https://github.com/user-attachments/assets/7d3fbd71-0e39-4094-b11a-bea3c9326622)
 
+![image](https://github.com/user-attachments/assets/a62d365e-13f8-4924-89f3-016df6d1fe55)
 
 
 
