--- a/HW1207/09_沈佩如/CH12.05_Q09.10.md
+++ b/HW1207/09_沈佩如/CH12.05_Q09.10.md
@@ -3,4 +3,14 @@
 ![image](https://github.com/user-attachments/assets/d880f0dd-5fed-4382-9cb3-09faa423c137)
 ![image](https://github.com/user-attachments/assets/137c8b40-b6a8-4d45-81bb-5652795c5c99)
 
-## 由題目得知：
+## 題目9. 找出當 x = 2 時，y 的平均值的 95% 信賴區間(CI)。
+>
+>由題目知，x = 2 時 $\hat{y_0}$ = 4.88571
+>
+>95%信賴區間為 [ 4.60061 , 5.17081 ]
+
+##題目10. 找出當 x = 2 時，未來觀察到的 y 值的 95% 預測區間(PI)。
+>
+>由題目知，x = 2 時 $\hat{y_0}$ = 4.88571
+>
+>95%預測區間為 [ 4.28856 , 5.48287 ]
