--- a/HW1207/09_沈佩如/CH12.03_Q05.md
+++ b/HW1207/09_沈佩如/CH12.03_Q05.md
@@ -24,9 +24,9 @@ $步驟1：H_0 : b = 0，H_a : b \ne$ 0
 
 $步驟3：\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
 
-$步驟4：t_{stat} = \frac{(\hat{b}-b_0)}{\sqrt{\frac{MSE}{S_{xx}}}}$ = \frac{1.2 - 0}{\sqrt{0.5333}{10}}}}$
+$步驟4：t_{stat} = \frac{(\hat{b}-b_0)}{\sqrt{\frac{MSE}{S_{xx}}}}$ = $\frac{1.2-0}{\sqrt{\frac{0.5333}{10}}$
 
-$\frac{1.2-0}{$\sqrt{\frac{0.5333}{10}}}$ = \frac{1.2}{0.2309} = 5.1963
+= $\frac{1.2}{0.2309} = 5.1963$
 
 
 且 $\alpha$ = 0.01
