--- a/HW1207/09_沈佩如/CH12.03_Q05.md
+++ b/HW1207/09_沈佩如/CH12.03_Q05.md
@@ -26,7 +26,9 @@ $步驟3：\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
 
 $步驟4：t_{stat} = \frac{(\hat{b}-b_0)}{\sqrt{\frac{MSE}{S_{xx}}}} = \frac{1.2-0}{\sqrt{\frac{0.5333}{10}}}$ = $\frac{1.2}{0.2309} = 5.1963$
 
+步驟5：查找 t* 值：在自由度 n - 2 = 3 和 99 %信賴水準下，從 t-分布表查得 t* $\approx$ 5.841
 
+步驟6：
 
 
 且 $\alpha$ = 0.01
