--- a/HW1207/09_沈佩如/CH12.03_Q05.md
+++ b/HW1207/09_沈佩如/CH12.03_Q05.md
@@ -28,7 +28,7 @@ $步驟4：t_{stat} = \frac{(\hat{b}-b_0)}{\sqrt{\frac{MSE}{S_{xx}}}} = \frac{1.
 
 步驟5：查找 t* 值：在自由度 n - 2 = 3 和 99 %信賴水準下，從 t-分布表查得 t* $\approx$ 5.841
 
-步驟6：
+步驟6：統計量沒有落在拒絕域中，故我們不拒絕 $H_0$，即沒有證據證明 X和 Y有線性關係
 
 
 且 $\alpha$ = 0.01
