--- a/HW1207/09_沈佩如/CH12.03_Q05.md
+++ b/HW1207/09_沈佩如/CH12.03_Q05.md
@@ -17,32 +17,18 @@
 ![image](https://github.com/user-attachments/assets/8c9d83e9-8f1b-4bd1-9c0b-78b57ce60431)
 
 ## 用t檢定檢定資料是否存在線性關係
-
-$步驟1：H_0 : b = 0，H_a : b \ne$ 0
-
-步驟2：sat $\alpha$ = 0.01
-
-$步驟3：\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
-
-$步驟4：t_{stat} = \frac{(\hat{b}-b_0)}{\sqrt{\frac{MSE}{S_{xx}}}} = \frac{1.2-0}{\sqrt{\frac{0.5333}{10}}}$ = $\frac{1.2}{0.2309} = 5.1963$
-
-步驟5：查找 t* 值：在自由度 n - 2 = 3 和 99 %信賴水準下，從 t-分布表查得 t* $\approx$ 5.841
-
-步驟6：統計量沒有落在拒絕域中，故我們不拒絕 $H_0$，即沒有證據證明 X和 Y有線性關係
-
-
-且 $\alpha$ = 0.01
-
-RR = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
-
-計算統計量
-
-$t_{stat}$ = $(\hat{b}-b_0)$ $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
-
-( SST = 16， SSR = 14.4 ，SSE = SST-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
-
-統計量並未落在拒絕域中，故我們不拒絕虛無假設，即無充分證據證明 X和 Y有線性關係
-
+>
+>$步驟1：H_0 : b = 0，H_a : b \ne$ 0
+>
+>步驟2：sat $\alpha$ = 0.01
+>
+>$步驟3：\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+>
+>$步驟4：t_{stat} = \frac{(\hat{b}-b_0)}{\sqrt{\frac{MSE}{S_{xx}}}} = \frac{1.2-0}{\sqrt{\frac{0.5333}{10}}}$ = $\frac{1.2}{0.2309} = 5.1963$
+>
+>步驟5：查找 t* 值：在自由度 n - 2 = 3 和 99 %信賴水準下，從 t-分布表查得 t* $\approx$ 5.841
+>
+>步驟6：統計量沒有落在拒絕域中，故我們不拒絕 $H_0$，即沒有證據證明 X和 Y有線性關係
 
 建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
 ---
