--- a/HW1207/09_沈佩如/CH12.03_Q05.md
+++ b/HW1207/09_沈佩如/CH12.03_Q05.md
@@ -30,11 +30,10 @@
 >
 >步驟6：統計量沒有落在拒絕域中，故我們不拒絕 $H_0$，即沒有證據證明 X和 Y有線性關係
 
-建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
----
-
-99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
-
-信賴區間為 [1.2- 0.2309*5.84 , 1.2+0.2309*5.84 ] = [-0.1485, 2.5485]
-
-即重複抽樣的情況下，有99%的機率此區間包含真實的斜率值
+## 建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
+>
+>99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
+>
+>99%信賴區間為 = 1.2 $\pm$ 5.841 * $\sqrt{\frac{0.5333}{10})}$ = 1.2 $\pm$ 1.3489 = [-0.1485, 2.5485]
+>
+>即重複抽樣的情況下，有99%的機率此區間包含真實的斜率值
